Changed schemes in xcode so I can build JSC or V8
Former-commit-id: 48011ba820dd4ba27a5a4a3fd51167aab9fd5ccd

--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
@@ -23,7 +23,7 @@
       </BuildActionEntries>
    </BuildAction>
    <TestAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Debug_JavascriptCore"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES">
@@ -42,7 +42,7 @@
       </AdditionalOptions>
    </TestAction>
    <LaunchAction
-      buildConfiguration = "Debug"
+      buildConfiguration = "Debug_JavascriptCore"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       disableMainThreadChecker = "YES"
@@ -65,6 +65,14 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <CommandLineArguments>
+         <CommandLineArgument
+            argument = "/Volumes/Code/PopRayTrace/"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
+            argument = "/Volumes/Code/PopEngine/UnitTest/CameraTest"
+            isEnabled = "YES">
+         </CommandLineArgument>
          <CommandLineArgument
             argument = "/Volumes/Code/GuildhallGildwall"
             isEnabled = "YES">
@@ -110,7 +118,7 @@
       </BuildableProductRunnable>
    </ProfileAction>
    <AnalyzeAction
-      buildConfiguration = "Debug">
+      buildConfiguration = "Debug_JavascriptCore">
    </AnalyzeAction>
    <ArchiveAction
       buildConfiguration = "Release"
