Added openvr submodule
Former-commit-id: 1137ed2e52cc170e85d9c0de6ba3143898fc90ea

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "UnitTest"]
 	path = UnitTest
 	url = https://github.com/NewChromantics/PopEngineUnitTests.git
+[submodule "src/Libs/OpenVr"]
+	path = src/Libs/OpenVr
+	url = https://github.com/ValveSoftware/openvr.git
