moved API around so images are getting submitted properly
Former-commit-id: d78503e6f26536c377b4ec4fca39f6e8ace78a22

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -272,6 +272,11 @@
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</DeploymentContent>
     </CustomBuild>
+    <None Include="..\..\PopRayTrace\BlitLeftRight.frag.glsl" />
+    <None Include="..\..\PopRayTrace\bootup.js" />
+    <None Include="..\..\PopRayTrace\PathTrace.frag.glsl" />
+    <None Include="..\..\PopRayTrace\PopShaderCache.js" />
+    <None Include="..\..\PopRayTrace\Quad.vert.glsl" />
     <None Include="..\src\Libs\JavascriptCore\win64\CFLite.pdb" />
     <CustomBuild Include="..\src\Libs\JavascriptCore\win64\icudt63.dll">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</DeploymentContent>
