Ignoring .framework again as the symbolic links don't get along with gitkraken
Former-commit-id: 4f30742a77be8222f48171b3618d827ba37f311b

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ sysinfo.txt
 # ignore libs, too big for lfs
 
 BuildData/
+
+
+# framework symbolic links are playing havoc with gitkraken
+*.framework
