Kinect in UnitTest
Former-commit-id: f43843bb488804aa9dcff15e92c84382c0ef18b6

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -432,6 +432,7 @@
     </None>
     <None Include="..\UnitTest\CameraTest\bootup.js" />
     <None Include="..\UnitTest\CameraTest\CameraTest.js" />
+    <None Include="..\UnitTest\CameraTest\KinectDepth.frag.glsl" />
     <None Include="..\UnitTest\CameraTest\Quad.vert.glsl">
       <FileType>Document</FileType>
     </None>
