Starting h264 encoder integration (x264)
Former-commit-id: 693c54453fc9bf7e8a7fe46843fb2f30b8a294b3

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -449,6 +449,7 @@
     <None Include="..\UnitTest\Common\PopShaderCache.js" />
     <None Include="..\UnitTest\Common\TFrameCounter.js" />
     <None Include="..\UnitTest\Gui\bootup.js" />
+    <None Include="..\UnitTest\H264Encode\bootup.js" />
     <None Include="..\UnitTest\HttpServer\bootup.js" />
     <None Include="..\UnitTest\Readme.md">
       <FileType>Document</FileType>
