Updated submodule UnitTest
Former-commit-id: 115ed857bead081c251307e4a04206435fbe4ad2

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -454,7 +454,9 @@
     <None Include="..\UnitTest\Common\PopShaderCache.js" />
     <None Include="..\UnitTest\Common\TFrameCounter.js" />
     <None Include="..\UnitTest\Gui\bootup.js" />
+    <None Include="..\UnitTest\H264Encode\Blit.frag.glsl" />
     <None Include="..\UnitTest\H264Encode\bootup.js" />
+    <None Include="..\UnitTest\H264Encode\Quad.vert.glsl" />
     <None Include="..\UnitTest\HttpServer\bootup.js" />
     <None Include="..\UnitTest\Readme.md">
       <FileType>Document</FileType>
@@ -664,6 +666,9 @@
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\UnitTest\VideoTest\ToyStory4_Baseline3.mp4" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\UnitTest\H264Encode\cat.jpeg" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{64811728-CD20-4F2C-899B-E3BF3D4B032E}</ProjectGuid>
