Showing common/memcheckloop
Former-commit-id: c5007dab1167ba650fe6085fb8664b4d82f27960

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -400,6 +400,7 @@
     <None Include="..\UnitTest\CameraTest\Yuv8_88.frag.glsl">
       <FileType>Document</FileType>
     </None>
+    <None Include="..\UnitTest\Common\MemCheckLoop.js" />
     <None Include="..\UnitTest\Common\PopEngine.js" />
     <None Include="..\UnitTest\Common\PopShaderCache.js" />
     <None Include="..\UnitTest\Common\TFrameCounter.js" />
