--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -608,17 +608,8 @@
     <None Include="..\UnitTest\H264Encode\Blit.frag.glsl">
       <Filter>UnitTest\H264Encode</Filter>
     </None>
-    <None Include="..\src\v8\lib\vccorlib140d.dll">
-      <Filter>Libs\v8\Runtime</Filter>
-    </None>
-    <None Include="..\src\v8\lib\vcruntime140d.dll">
-      <Filter>Libs\v8\Runtime</Filter>
-    </None>
-    <None Include="..\src\v8\lib\ucrtbased.dll">
-      <Filter>Libs\v8\Runtime</Filter>
-    </None>
-    <None Include="..\src\v8\lib\msvcp140d.dll">
-      <Filter>Libs\v8\Runtime</Filter>
+    <None Include="..\UnitTest\Common\MemCheckLoop.js">
+      <Filter>UnitTest\Common</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -912,6 +903,10 @@
       <Filter>Libs\Openvr</Filter>
     </CustomBuild>
     <CustomBuild Include="..\src\Libs\x264\bin\x64\x264.dll" />
+    <CustomBuild Include="..\src\v8\lib\msvcp140d.dll" />
+    <CustomBuild Include="..\src\v8\lib\ucrtbased.dll" />
+    <CustomBuild Include="..\src\v8\lib\vccorlib140d.dll" />
+    <CustomBuild Include="..\src\v8\lib\vcruntime140d.dll" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\UnitTest\VideoTest\ToyStory4_Baseline3.mp4">
