Now supporting windows&console subsystem, but soy improvements means we now print to console anyway
Former-commit-id: aee158685320fdc55f515f9a22c1f9ccb0bec74f

--- a/PopEngine.visualstudio/PopEngine.props
+++ b/PopEngine.visualstudio/PopEngine.props
@@ -33,6 +33,7 @@
       <FullProgramDatabaseFile>true</FullProgramDatabaseFile>
       <DelayLoadDLLs>PopCameraDevice.dll;PopH264.dll</DelayLoadDLLs>
       <Profile>true</Profile>
+      <SubSystem>Windows</SubSystem>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
