Setting up Jsrt (chakra, rename it this?)
Former-commit-id: 06d2f1636af0beef45fd3a7f90ac7b40e413b92d

--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -435,6 +435,9 @@
     <ClInclude Include="..\src\Libs\x264\include\x264_config.h">
       <Filter>Libs\X264</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\JsrtBind.h">
+      <Filter>Source</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\src\PopEngineAppBundle.xcconfig">
@@ -803,6 +806,9 @@
       <Filter>Source</Filter>
     </ClCompile>
     <ClCompile Include="..\src\TApiGui.cpp">
+      <Filter>Source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\JsrtBind.cpp">
       <Filter>Source</Filter>
     </ClCompile>
   </ItemGroup>
