Ignoring some vs2017 intermediate files
Former-commit-id: 7ec60add9fbb977ee9283ebd6c3bddb0d4322351

--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ BuildData/
 
 # framework symbolic links are playing havoc with gitkraken
 *.framework
+
+PopEngine\.visualstudio/\.vs/PopEngine/v15/ipch/
