--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -27,7 +27,12 @@
     <ClInclude Include="..\src\JsCoreDll.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_Jsrt|x64'">true</ExcludedFromBuild>
     </ClInclude>
-    <ClInclude Include="..\src\JsrtBind.h" />
+    <ClInclude Include="..\src\JsrtBind.h">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClInclude>
     <ClInclude Include="..\src\Libs\dyncall\include\dyncall.h" />
     <ClInclude Include="..\src\Libs\dyncall\include\dyncall_alloc_wx.h" />
     <ClInclude Include="..\src\Libs\dyncall\include\dyncall_args.h" />
@@ -245,7 +250,12 @@
     <ClInclude Include="..\src\v8\include\v8config.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\JsrtBind.cpp" />
+    <ClCompile Include="..\src\JsrtBind.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug_V8|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Master_V8|x64'">true</ExcludedFromBuild>
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </ClCompile>
     <ClCompile Include="..\src\TApiDll.cpp" />
     <ClCompile Include="..\src\TApiGui.cpp" />
     <ClCompile Include="..\src\TApiOpenvr.cpp" />
