--- a/src/PopEngine_JsCore_App.xcconfig
+++ b/src/PopEngine_JsCore_App.xcconfig
@@ -2,7 +2,7 @@
 //#include "PopApp.xcconfig"
 
 
-GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
+GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL JSAPI_JSCORE
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
 BROADWAY_PATH = $(SRCROOT)/src/SoyBroadway/Broadway/Decoder
