--- a/src/PopEngine_JsCore_App.xcconfig
+++ b/src/PopEngine_JsCore_App.xcconfig
@@ -5,9 +5,11 @@
 GCC_PREPROCESSOR_DEFINITIONS = $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL JSAPI_JSCORE
 INFOPLIST_FILE = $(SRCROOT)/Info.plist
 
+MAGIC_LEAP_PATH = "/Volumes/Code/MagicLeap/mlsdk/v0.21.0/";
+
 BROADWAY_PATH = $(SRCROOT)/src/SoyBroadway/Broadway/Decoder
 SOYLIB_PATH = $(SRCROOT)/src/
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(DLIB_PATH)/include $(BROADWAY_PATH)/inc $(SOYLIB_PATH)
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(DLIB_PATH)/include $(BROADWAY_PATH)/inc $(SOYLIB_PATH) $(MAGIC_LEAP_PATH)/include
 LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(DLIB_PATH)/lib
 
 OTHER_CFLAGS = -Wno-ambiguous-macro
