Renamed props for JSAPI's, JSRT is now chakra
Former-commit-id: 3f6ef18aaa981b87cc47109aeb6fb786e3008b50

--- a/PopEngine.visualstudio/JsApi_Chakra.props
+++ b/PopEngine.visualstudio/JsApi_Chakra.props
@@ -9,7 +9,7 @@
     <ClCompile>
     </ClCompile>
     <ClCompile>
-      <PreprocessorDefinitions>JSAPI_JSRT;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>JSAPI_CHAKRA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup />
