Chakra builds & runs
Former-commit-id: 1f2f9c104836dbcdc3687ac5a8a17f513f5b17ae

--- a/PopEngine.visualstudio/JsApi_Chakra.props
+++ b/PopEngine.visualstudio/JsApi_Chakra.props
@@ -3,7 +3,7 @@
   <ImportGroup Label="PropertySheets" />
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
-    <IncludePath>$(ProjectDir)..\src\v8\include;$(ProjectDir)..\src\v8\;$(IncludePath)</IncludePath>
+    <IncludePath>$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup>
     <ClCompile>
@@ -11,6 +11,9 @@
     <ClCompile>
       <PreprocessorDefinitions>JSAPI_CHAKRA;%(PreprocessorDefinitions)</PreprocessorDefinitions>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>chakrart.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemGroup />
 </Project>
