Added OpenPose to map, updated demo
Former-commit-id: 37d16c2638a25fcc3760ef6c85b74dc1ba75f3e8

--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
@@ -66,6 +66,10 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "/Volumes/Code/PopEngine/UnitTest/CoremlPersonDetection"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/PopRayTrace/"
             isEnabled = "YES">
          </CommandLineArgument>
