--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_JavascriptCore.xcscheme
@@ -66,6 +66,10 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "/Volumes/Code/Tarquini_AcidSea"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/PopEngine/UnitTest/CoremlPersonDetection"
             isEnabled = "YES">
          </CommandLineArgument>
