Tidied up xcconfigs
Former-commit-id: 24f2319128b3c5001d218359b54ca01c77d04418

--- a/src/PopEngine_Chakra_App.xcconfig
+++ b/src/PopEngine_Chakra_App.xcconfig
@@ -1,17 +1,9 @@
-//	config for OSX bundle apps
-//#include "PopApp.xcconfig"
+#include "PopEngine.xcconfig"
 
-
-GCC_PREPROCESSOR_DEFINITIONS = JSAPI_CHAKRA $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
-INFOPLIST_FILE = $(SRCROOT)/Info.plist
+GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) JSAPI_CHAKRA
+//GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) ENABLE_COREML_MODELS
 
 CHAKRA_PATH = $(SRCROOT)/src/Libs/ChakraCore/include
-BROADWAY_PATH = $(SRCROOT)/src/SoyBroadway/Broadway/Decoder
-SOYLIB_PATH = $(SRCROOT)/src/
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(CHAKRA_PATH) $(DLIB_PATH)/include $(BROADWAY_PATH)/inc $(SOYLIB_PATH)
-LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(DLIB_PATH)/lib
 
-OTHER_CFLAGS = -Wno-ambiguous-macro
-
-//	10.13 for coreml
-MACOSX_DEPLOYMENT_TARGET = 10.13
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(CHAKRA_PATH)
+LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS)
