--- a/src/PopEngine_V8_App.xcconfig
+++ b/src/PopEngine_V8_App.xcconfig
@@ -1,17 +1,9 @@
-//	config for OSX bundle apps
-//#include "PopApp.xcconfig"
+#include "PopEngine.xcconfig"
 
-
-GCC_PREPROCESSOR_DEFINITIONS = JSAPI_V8 $(inherited) TARGET_OSX_BUNDLE ENABLE_OPENGL
-INFOPLIST_FILE = $(SRCROOT)/Info.plist
+GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) JSAPI_V8
+//GCC_PREPROCESSOR_DEFINITIONS = $(GCC_PREPROCESSOR_DEFINITIONS) ENABLE_COREML_MODELS
 
 V8_PATH = $(SRCROOT)/src/v8
-BROADWAY_PATH = $(SRCROOT)/src/SoyBroadway/Broadway/Decoder
-SOYLIB_PATH = $(SRCROOT)/src/
-HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(inherited) $(V8_PATH) $(V8_PATH)/include $(DLIB_PATH)/include $(BROADWAY_PATH)/inc $(SOYLIB_PATH)
-LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(inherited) $(V8_PATH)/lib $(DLIB_PATH)/lib
 
-OTHER_CFLAGS = -Wno-ambiguous-macro
-
-//	10.13 for coreml
-MACOSX_DEPLOYMENT_TARGET = 10.13
+HEADER_SEARCH_PATHS = $(HEADER_SEARCH_PATHS) $(V8_PATH) $(V8_PATH)/include
+LIBRARY_SEARCH_PATHS = $(LIBRARY_SEARCH_PATHS) $(V8_PATH)/lib
