Window scrolling in gui windows now built in
Former-commit-id: 33e16b923de742172a3d3f1d412e66880c5852eb

--- a/PopEngine.visualstudio/PopEngine.vcxproj
+++ b/PopEngine.visualstudio/PopEngine.vcxproj
@@ -482,6 +482,7 @@
     <None Include="..\UnitTest\OpencvArucoMarker\Blit.frag.glsl" />
     <None Include="..\UnitTest\OpencvArucoMarker\bootup.js" />
     <None Include="..\UnitTest\OpencvArucoMarker\Quad.vert.glsl" />
+    <None Include="..\UnitTest\Pop.d.ts" />
     <None Include="..\UnitTest\Readme.md">
       <FileType>Document</FileType>
     </None>
