--- a/PopEngine.visualstudio/PopEngine.vcxproj.filters
+++ b/PopEngine.visualstudio/PopEngine.vcxproj.filters
@@ -665,8 +665,8 @@
     <None Include="..\UnitTest\OpencvArucoMarker\Blit.frag.glsl">
       <Filter>UnitTest\OpencvArucoMarker</Filter>
     </None>
-    <None Include="..\src\Libs\Opencv\x64\vc15\bin\opencv_world410.dll">
-      <Filter>Libs\Opencv</Filter>
+    <None Include="..\UnitTest\Pop.d.ts">
+      <Filter>UnitTest</Filter>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -997,6 +997,7 @@
     <CustomBuild Include="..\src\Libs\Opencv\x64\vc15\bin\opencv_world410d.dll">
       <Filter>Libs\Opencv</Filter>
     </CustomBuild>
+    <CustomBuild Include="..\src\Libs\Opencv\x64\vc15\bin\opencv_world410.dll" />
   </ItemGroup>
   <ItemGroup>
     <Media Include="..\UnitTest\VideoTest\ToyStory4_Baseline3.mp4">
