Params for underthesea debugging
Former-commit-id: 984273be654a8258677c3d49751fdbac3d8a3978

--- a/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_V8.xcscheme
+++ b/PopTrack.xcodeproj/xcshareddata/xcschemes/PopEngine_V8.xcscheme
@@ -66,6 +66,10 @@
       </BuildableProductRunnable>
       <CommandLineArguments>
          <CommandLineArgument
+            argument = "/Volumes/Code/Tarquini_AcidSea AutoStart ShortOcean"
+            isEnabled = "YES">
+         </CommandLineArgument>
+         <CommandLineArgument
             argument = "/Volumes/Code/Varjo_TriangleDetect/Pop"
             isEnabled = "YES">
          </CommandLineArgument>
